# edgecommons

./: .flake8  .gitattributes  .gitignore  .gitlab-ci.yml  .npmrc  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  LICENSE  LOGGING_COMPATIBILITY_GUIDE.md  MANIFEST.in  NOTICE  README.md  build.sh  config.json  config_2.json  config_3.json  config_global_logging_sample.json  config_sample_with_logging.json  dependency-reduced-pom.xml  gdk-config.json  gen-tls-certs.sh  ggcommons-template.json  increment_version.py  main.py  package-lock.json  package.json  pnpm-workspace.yaml  pom.xml  pyproject.toml  pytest.ini  recipe.yaml  requirements-test.txt  requirements.txt  run_pytest.py  setup.py  standalone-messaging-sample.json
cli/: .gitignore  Cargo.toml  README.md  pyproject.toml  setup.py
cli/crates/ec-adapters/: Cargo.toml
cli/crates/ec-adapters/src/: lib.rs
cli/crates/ec-adapters/tests/: drafts.rs
cli/crates/ec-cli/: Cargo.toml
cli/crates/ec-cli/src/: cli.rs  main.rs
cli/crates/ec-cli/tests/: cli.rs
cli/crates/ec-deploy/: Cargo.toml
cli/crates/ec-deploy/schema/: deployment-definition.schema.json
cli/crates/ec-deploy/src/: codeowners.rs  draft.rs  greengrass.rs  kubernetes.rs  lib.rs  lock.rs  merge.rs  model.rs  ports.rs  release.rs  render.rs  validate.rs  workspace.rs
cli/crates/ec-deploy/tests/: dallas_gg_golden.rs  dallas_golden.rs  dallas_k8s_golden.rs  kernel_coverage.rs
cli/crates/ec-diag/: Cargo.toml
cli/crates/ec-diag/src/: lib.rs
cli/crates/ec-scaffold/: Cargo.toml  build.rs
cli/crates/ec-scaffold/licenses/: BUSL-1.1.txt
cli/crates/ec-scaffold/src/: catalog.rs  generate.rs  lib.rs  licenses.rs  manifest.rs  upgrade.rs
cli/crates/ec-studio/: Cargo.toml
cli/crates/ec-studio/src/: index.html  lib.rs
cli/crates/ec-studio/ui/: .gitignore  index.html  package.json  vite.config.ts
cli/crates/ec-validate/: Cargo.toml
cli/crates/ec-validate/src/: artifact.rs  lib.rs  schema.rs  semantic.rs
cli/crates/ec-validate/tests/: schema_drift.rs
cli/docs/: README.md  explanation.md  how-to-guides.md  tutorial.md
cli/docs/reference/: commands.md  exit-codes.md
cli/edgecommons_cli/: __init__.py  cli.py
cli/edgecommons_cli/commands/: create_component.py  deploy.py  doctor.py  list_components.py  list_templates.py  upgrade.py  validate.py
cli/ggcommons_cli/: cli.py  recipe_lint.py
cli/ggcommons_cli/commands/: create_component.py  doctor.py  list_components.py  list_templates.py  upgrade.py  validate.py
cli/scripts/: edgecommons-cli.cmd  edgecommons-cli.ps1  edgecommons-cli.sh  ggcommons-cli.cmd  ggcommons-cli.ps1
cli/tests/: test_bundled_templates.py  test_deploy.py  test_generate.py  test_interactive_and_conditional.py  test_list_components.py  test_recipe_hygiene.py  test_recipe_lint.py  test_upgrade.py
examples/rust/: .gitignore  Cargo.toml  README.md  build.sh  gdk-config.json  recipe.yaml  wsl-device-build.sh
examples/rust/src/: app.rs  main.rs
examples/rust/test-configs/: config.json
libs/rust/: Cargo.toml  README.md
libs/rust-streamlog/: Cargo.toml  README.md  build.rs
libs/rust-streamlog/bench/: README.md  run_matrix.ps1  run_matrix.sh
libs/rust-streamlog/bench/results/: README.md
libs/rust-streamlog/benches/: append.rs  recovery.rs
libs/rust-streamlog/bindings/node/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json
libs/rust-streamlog/bindings/python/: .gitignore  Cargo.toml  pyproject.toml
libs/rust-streamlog/ctest/: run_smoke.sh  smoke.c
libs/rust-streamlog/examples/: bench_compare.rs  loadgen.rs
libs/rust-streamlog/include/: edgestreamlog.h  ggstreamlog.h
libs/rust-streamlog/src/: config.rs  error.rs  ffi.rs  lib.rs  log.rs  payload.rs  proto.rs  record.rs  service.rs
libs/rust-streamlog/tests/: embedded_log.rs  export.rs  ffi_sink_callback.rs  kafka_redpanda.rs  kinesis_floci.rs  segment_log.rs
libs/rust/deploy/: README.md  com.ggcommons.RustShadowVerify-1.0.0.yaml  com.mbreissi.edgecommons.RustShadowVerify-1.0.0.yaml
libs/rust/doc/: architecture.md  command-line-options.md  commands.md  configuration.md  heartbeat.md  logging.md  messaging.md  metric-emission.md  sdk-receive-mode-feature-request.md
libs/rust/examples/: shadow_verify.rs  skeleton.rs
libs/rust/resources/: ggcommons-config-schema.json
libs/rust/src/: cli.rs  commands.rs  error.rs  health.rs  heartbeat.rs  instance.rs  ipc.rs  lib.rs  logging.rs  logs.rs  platform.rs  proto.rs  testutil.rs  uns.rs
libs/rust/test-configs/: config.json  messaging.json
libs/rust/tests/: config_hot_reload.rs  credentials_central.rs  credentials_local.rs  credentials_pkcs11.rs  dual_broker_mqtt.rs  heartbeat_mqtt.rs  lib_inproc.rs  lib_standalone.rs  messaging_inproc.rs  messaging_mqtt.rs  metrics_mqtt.rs  public_api.rs  tls_mqtt.rs
templates/python-protocol-adapter/: .coveragerc  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  README.md  compose.yaml  config.schema.json  edgecommons-template.json  gdk-config.json  ggcommons-template.json  main.py  pyproject.toml  recipe.yaml  requirements.txt
templates/python-protocol-adapter/app/: __init__.py  adapter.py  command_service.py  device.py  metrics.py
templates/python-protocol-adapter/docs/: README.md  explanation.md  how-to-guides.md  sample-configurations.md  tutorial.md
templates/python-protocol-adapter/k8s/: configmap.yaml  deployment.yaml
templates/python-protocol-adapter/supervisor/: component.conf
templates/python-protocol-adapter/test-configs/: TestComponent.json
templates/python-protocol-adapter/tests/: conftest.py  test_adapter.py  test_commands.py  test_device.py  test_live_sim.py  test_metrics.py
templates/rust/: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  build.sh  edgecommons-template.json  ggcommons-template.json  recipe.yaml
templates/rust/docs/: README.md  explanation.md  how-to-guides.md  sample-configurations.md  tutorial.md
templates/rust/k8s/: configmap.yaml
templates/rust/src/: app.rs  commands.rs  main.rs
templates/rust/test-configs/: config.json
test-infra/interop/rust_node/: Cargo.toml
(+2699 files in other folders)
