[package]
name = "rust-component-skeleton"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "Greengrass component skeleton (Rust) — best-practices demo built on the ggcommons Rust library"
publish = false

# Worked example component, mirroring java-component-skeleton / python-component-skeleton.
# Depends on the local ggcommons crate via a path dependency for local development.

[[bin]]
name = "rust-component-skeleton"
path = "src/main.rs"

# Runtime selection mirrors the library: `standalone` (dual-broker MQTT, default) for
# containers/laptops, `greengrass` (IPC) for deployment on a Greengrass core. Build
# the device artifact with `--no-default-features --features greengrass` on Linux.
[features]
default = ["standalone"]
standalone = ["ggcommons/standalone"]
greengrass = ["ggcommons/greengrass"]
# Direct CloudWatch metric target (AWS SDK PutMetricData). Pulls in aws-config +
# aws-sdk-cloudwatch; combine with `greengrass` for on-device use.
cloudwatch = ["ggcommons/cloudwatch"]

[dependencies]
# Local path dependency on the ggcommons Rust library (sibling project).
ggcommons = { path = "../ggcommons-rust-lib", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
async-trait = "0.1"
