[package]
name = "<<BINNAME>>"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "<<DESCRIPTION>>"
publish = false

[[bin]]
name = "<<BINNAME>>"
path = "src/main.rs"

# Runtime selection mirrors the ggcommons library:
#   - `standalone` (default): dual-broker MQTT — runs on a laptop/container, no C
#     toolchain. Use this for `cargo run` / `cargo test` during development.
#   - `greengrass`: Greengrass IPC — the on-device build. Linux-only (the SDK is a
#     C-FFI crate needing libclang). `build.sh` builds the artifact with this feature.
[features]
default = ["standalone"]
standalone = ["ggcommons/standalone"]
greengrass = ["ggcommons/greengrass"]
# Direct CloudWatch metric target (AWS SDK PutMetricData); combine with `greengrass`.
cloudwatch = ["ggcommons/cloudwatch"]

[dependencies]
# ggcommons Rust library. Absolute path dependency filled in at generation time.
# Swap this for a git or registry dependency once the library is published.
ggcommons = { path = "<<GGCOMMONS_PATH>>", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
async-trait = "0.1"
