[build-system]
# Pure-Python library: only setuptools + wheel are needed to build. (The previous
# numpy/cmake/astunparse/pyyaml/requests entries were never used and broke offline
# builds.)
requires = [
    "setuptools",
    "wheel",
]
# Use legacy backend to import local packages in setup.py
build-backend = "setuptools.build_meta:__legacy__"


[tool.black]
# Uncomment if pyproject.toml worked fine to ensure consistency with flake8
# line-length = 120
target-version = ["py39", "py310", "py311", "py312", "py313"]
