[workspace]
resolver = "3"
members = [
    "crates/ec-diag",
    "crates/ec-scaffold",
    "crates/ec-validate",
    "crates/ec-deploy",
    "crates/ec-adapters",
    "crates/ec-studio",
    "crates/ec-cli",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/edgecommons/edgecommons"

[workspace.dependencies]
ec-diag = { path = "crates/ec-diag" }
ec-scaffold = { path = "crates/ec-scaffold" }
ec-validate = { path = "crates/ec-validate" }
ec-deploy = { path = "crates/ec-deploy" }
ec-adapters = { path = "crates/ec-adapters" }
ec-studio = { path = "crates/ec-studio" }

anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
include_dir = "0.7"
# default-features = false drops the `resolve-http` feature (and with it reqwest). The
# validation engine must not be able to fetch a schema over the network: `component validate`
# and `deployment validate` are offline by construction (DESIGN-cli P2). Schemas come from
# the embedded copy, the component's own repo, or the lock file — never a URL.
jsonschema = { version = "0.26", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
toml_edit = "0.22"
walkdir = "2"
