[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "edgecommons-cli"
version = "0.2.0"
description = "Scaffolding CLI that generates AWS IoT Greengrass v2 components built on the edgecommons libraries (Java, Python, Rust)."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
dependencies = [
    "jsonschema>=4",
    "GitPython>=3.1",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
edgecommons = "edgecommons_cli.cli:main"
edgecommons-cli = "edgecommons_cli.cli:main"

[tool.setuptools]
packages = ["edgecommons_cli", "edgecommons_cli.commands"]
