[package]
name = "rust-component-skeleton"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "Greengrass component skeleton (Rust) — best-practices demo built on the ggcommons Rust library"
publish = false

# Worked example component, mirroring java-component-skeleton / python-component-skeleton.
# Depends on the local ggcommons crate via a path dependency for local development.

[[bin]]
name = "rust-component-skeleton"
path = "src/main.rs"

# Runtime selection mirrors the library: `standalone` (dual-broker MQTT, default) for
# containers/laptops, `greengrass` (IPC) for deployment on a Greengrass core. Build
# the device artifact with `--no-default-features --features greengrass` on Linux.
[features]
default = ["standalone"]
standalone = ["ggcommons/standalone"]
greengrass = ["ggcommons/greengrass"]
# Direct CloudWatch metric target (AWS SDK PutMetricData). Pulls in aws-config +
# aws-sdk-cloudwatch; combine with `greengrass` for on-device use.
cloudwatch = ["ggcommons/cloudwatch"]
# Telemetry streaming (ggstreamlog core). `streaming` is buffer-only; `streaming-kinesis`
# adds the real Kinesis sink (AWS SDK; on-device it authenticates via TES). The streaming
# config section in recipe.yaml is inert unless one of these is built in.
streaming = ["ggcommons/streaming"]
# Enable the example crate's own `streaming` cfg too (not just the library's), so the
# app.rs streaming code is compiled in — mirrors the library's feature chaining.
streaming-kinesis = ["streaming", "ggcommons/streaming-kinesis"]
# Credentials / local encrypted vault (gg.credentials()). The `credentials` config section in
# recipe.yaml is inert unless this is built in. `credentials-aws` adds central sync from AWS
# Secrets Manager + the KMS-via-TES key provider (on-device it authenticates via TES).
credentials = ["ggcommons/credentials"]
credentials-aws = ["credentials", "ggcommons/credentials-aws"]
# Parameters / externalized config (gg.parameters()). The `parameters` config section in
# recipe.yaml is inert unless this is built in. The `env`/`mountedDir` sources need no AWS;
# `parameters-aws` adds the SSM Parameter Store source (on-device it authenticates via TES).
parameters = ["ggcommons/parameters"]
parameters-aws = ["parameters", "ggcommons/parameters-aws"]

[dependencies]
# Local path dependency on the ggcommons Rust library (sibling project in the monorepo).
ggcommons = { path = "../../libs/rust", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
async-trait = "0.1"
