[package]
name = "ggstreamlog"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "Durable, store-and-forward telemetry log + export engine for ggcommons (Phase 1 core)."
publish = false

[features]
default = []
# KinesisSink (AWS SDK; heavy). Off by default so the core builds without AWS deps.
kinesis = ["dep:aws-config", "dep:aws-sdk-kinesis", "dep:tokio"]
# KafkaSink (rdkafka / librdkafka, built via cmake). Off by default.
kafka = ["dep:rdkafka", "dep:tokio"]
# C ABI (src/ffi.rs) for the language bindings (Java/Panama, Python, Node). Build a cdylib with
# this feature; pair with `kinesis` to get the real export sink in the shared library.
cabi = ["dep:tracing-subscriber"]

# Build an rlib (for the Rust consumers: libs/rust, benches, tests) AND a cdylib (the C-ABI shared
# library for the bindings, when built with --features cabi).
[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crc32c = "0.6"
thiserror = "2"
tracing = "0.1"
# Forwards the core's tracing events to a host log callback over the C-ABI (feature = "cabi").
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"], optional = true }

# Export engine async runtime + KinesisSink (feature = "kinesis").
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"], optional = true }
aws-config = { version = "1", optional = true }
aws-sdk-kinesis = { version = "1", optional = true }

# KafkaSink (feature = "kafka"). cmake-build vendors + builds librdkafka (needs cmake + a C
# compiler); no system librdkafka required.
rdkafka = { version = "0.36", features = ["cmake-build"], optional = true }

[dev-dependencies]
proptest = "1"
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports"] }

# Micro-benchmarks (§15.5): append latency/throughput, recovery time vs log size.
[[bench]]
name = "append"
harness = false

[[bench]]
name = "recovery"
harness = false
