[package]
name = "ggcommons"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Greengrass Commons — Rust library for building AWS IoT Greengrass v2 components"
readme = "README.md"

# Coexists with the Java (canonical) and Python implementations; tracks the same
# config schema and CLI contract. See ../GGCOMMONS_RUST_PORT.md for the full plan.

[features]
default = ["standalone"]
# STANDALONE runtime mode: dual-broker MQTT (local + AWS IoT Core).
standalone = ["dep:rumqttc"]
# GREENGRASS runtime mode: IPC via aws-greengrass-component-sdk.
# NOTE: the SDK is a Linux-only C-FFI crate (bindgen + cc, GNU/Linux flags, UDS IPC);
# it will not build on Windows/MSVC. Only enable this feature on a Linux toolchain.
greengrass = ["dep:aws-greengrass-component-sdk"]
# CloudWatch metric target via the AWS SDK (heavy deps; off by default).
cloudwatch = ["dep:aws-config", "dep:aws-sdk-cloudwatch"]
# Telemetry streaming: durable store-and-forward streams + export engine (ggstreamlog core).
# `streaming` alone is buffer-only (no AWS); `streaming-kinesis` adds the real Kinesis sink.
streaming = ["dep:ggstreamlog"]
streaming-kinesis = ["streaming", "ggstreamlog/kinesis"]
streaming-kafka = ["streaming", "ggstreamlog/kafka"]
# Credentials / local vault: encrypted-at-rest secret store + FileKeyProvider (pure-Rust crypto,
# builds everywhere). The AWS Secrets Manager central source is a later, separately-gated add.
credentials = [
    "dep:aes-gcm", "dep:hmac", "dep:sha2", "dep:hkdf",
    "dep:zeroize", "dep:getrandom", "dep:base64", "dep:fs4",
]
# Central sync from AWS Secrets Manager + KMS-wrapped DEK (adds the AWS SDK; off by default).
credentials-aws = ["credentials", "dep:aws-config", "dep:aws-sdk-secretsmanager", "dep:aws-sdk-kms"]
# PKCS#11 KEK custodian: wrap the DEK with a non-extractable AES key on an HSM/TPM/SoftHSM.
# `cryptoki` dlopens the module at runtime (no link-time C dep), so this compiles everywhere;
# it only needs a real PKCS#11 module present at runtime.
credentials-pkcs11 = ["credentials", "dep:cryptoki"]

[dependencies]
thiserror = "2"
clap = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.46"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs"] }
async-trait = "0.1"
arc-swap = "1"
sysinfo = "0.39"
notify = "8"
# Message wire-format parity with Java/Python: UUID correlation ids + RFC3339 timestamps.
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting"] }

# STANDALONE-only. Pure-Rust async MQTT — no C toolchain, clean ARM/musl cross-compile.
rumqttc = { version = "0.25", optional = true }

# cloudwatch metric target (feature = "cloudwatch").
aws-config = { version = "1", optional = true }
aws-sdk-cloudwatch = { version = "1", optional = true }

# Telemetry-streaming core (feature = "streaming"); the Kinesis sink adds the AWS SDK
# (feature = "streaming-kinesis"). Pure-Rust core builds everywhere.
ggstreamlog = { path = "../rust-streamlog", optional = true }

# Credentials / local vault (feature = "credentials"). Universal, cross-language-portable
# primitives (AES-256-GCM, HMAC-SHA256, HKDF-SHA256) so the on-disk vault format is identical
# across the Java/Python/TS ports; zeroize wipes key material; fs4 is the cross-platform
# advisory file lock for the shared device vault's single-writer model.
aes-gcm = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
hkdf = { version = "0.12", optional = true }
zeroize = { version = "1", optional = true }
getrandom = { version = "0.2", optional = true }
base64 = { version = "0.22", optional = true }
fs4 = { version = "0.13", optional = true, features = ["sync"] }
# Central source (feature = "credentials-aws"): AWS Secrets Manager via the AWS SDK
# (aws-config is already an optional dep above for the cloudwatch feature).
aws-sdk-secretsmanager = { version = "1", optional = true }
aws-sdk-kms = { version = "1", optional = true }
# PKCS#11 KEK custodian (feature = "credentials-pkcs11"). Runtime-loads the module via libloading.
cryptoki = { version = "0.8", optional = true }

# GREENGRASS-only. Native AWS Greengrass IPC SDK (lib name `gg_sdk`).
# Linux-only C-FFI crate (bindgen + cc); only built when the `greengrass` feature is
# enabled, which must only be done on a Linux toolchain.
aws-greengrass-component-sdk = { version = "1.0.4", optional = true }

# logging.fileLogging (size-rotated file output) is implemented self-contained in
# src/logging.rs (std::fs only) — no tracing-appender needed (it only does
# time-based rotation; we match the Python library's size-based maxFileSize/backupCount).
# notify drives FILE config hot-reload (src/config/source/file.rs); local + IoT Core
# TLS (incl. mutual) is provided by rumqttc's rustls. The cloudwatch metric target
# (aws-config / aws-sdk-cloudwatch) is gated behind the optional `cloudwatch` feature.

# Windows: per-process thread + handle counts for the heartbeat (sysinfo lacks these).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
anyhow = "1"
# Integration-test logging to a file (in addition to the console).
tracing-appender = "0.2"
# Temp dirs for streaming tests (RAII cleanup).
tempfile = "3"
