[package]
name = "ggcommons"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
description = "Greengrass Commons — Rust library for building AWS IoT Greengrass v2 components"
readme = "README.md"

# Coexists with the Java (canonical) and Python implementations; tracks the same
# config schema and CLI contract. See ../GGCOMMONS_RUST_PORT.md for the full plan.

[features]
default = ["standalone"]
# STANDALONE runtime mode: dual-broker MQTT (local + AWS IoT Core).
standalone = ["dep:rumqttc"]
# GREENGRASS runtime mode: IPC via aws-greengrass-component-sdk.
# NOTE: the SDK is a Linux-only C-FFI crate (bindgen + cc, GNU/Linux flags, UDS IPC);
# it will not build on Windows/MSVC. Only enable this feature on a Linux toolchain.
greengrass = ["dep:aws-greengrass-component-sdk"]
# CloudWatch metric target via the AWS SDK (heavy deps; off by default).
cloudwatch = ["dep:aws-config", "dep:aws-sdk-cloudwatch"]
# Prometheus pull-based metric target (FR-MET-1/2/3): an in-process registry served as
# OpenMetrics/Prometheus text over HTTP at /metrics. The DEFAULT metric target on the
# KUBERNETES platform — but only when this feature is compiled in (a feature-less k8s build
# gracefully falls back to the `log` target; an EXPLICIT config target=prometheus without the
# feature is an error, mirroring the `cloudwatch` feature pattern). Off by default so the
# standard build stays light; the community `prometheus` crate is cross-platform (its optional
# `process`/`push` collectors are NOT enabled here).
metrics-prometheus = ["dep:prometheus"]
# Durable CloudWatch metric buffer: store-and-forward `PutMetricData` over the ggstreamlog
# embedded disk buffer + export engine (a `CloudWatchSink` impl'ing the core `Sink` trait).
# This feature alone pulls in ONLY the lightweight streaming core, so the buffer/serialize/
# stale-drop/chunk logic + its unit tests build everywhere without the heavy AWS SDK. The real
# `PutMetricData` send (AwsPutMetricDataSender) and production wiring additionally need the
# `cloudwatch` feature; combine `metrics-cloudwatch-durable` + `cloudwatch` for the full target.
metrics-cloudwatch-durable = ["streaming"]
# Telemetry streaming: durable store-and-forward streams + export engine (ggstreamlog core).
# `streaming` alone is buffer-only (no AWS); `streaming-kinesis` adds the real Kinesis sink.
streaming = ["dep:ggstreamlog"]
streaming-kinesis = ["streaming", "ggstreamlog/kinesis"]
streaming-kafka = ["streaming", "ggstreamlog/kafka"]
# File sink: rolling Parquet/AVRO files for later bulk upload to a data lake. `streaming-file` is the
# umbrella (no encoder — not useful alone); pick `streaming-file-parquet` and/or `streaming-file-avro`.
streaming-file = ["streaming", "ggstreamlog/file"]
streaming-file-parquet = ["streaming", "ggstreamlog/parquet"]
streaming-file-avro = ["streaming", "ggstreamlog/avro"]
# Credentials / local vault: encrypted-at-rest secret store + FileKeyProvider (pure-Rust crypto,
# builds everywhere). The AWS Secrets Manager central source is a later, separately-gated add.
credentials = [
    "dep:aes-gcm", "dep:hmac", "dep:sha2", "dep:hkdf",
    "dep:zeroize", "dep:getrandom", "dep:base64", "dep:fs4",
]
# Central sync from AWS Secrets Manager + KMS-wrapped DEK (adds the AWS SDK; off by default).
credentials-aws = ["credentials", "dep:aws-config", "dep:aws-sdk-secretsmanager", "dep:aws-sdk-kms"]
# PKCS#11 KEK custodian: wrap the DEK with a non-extractable AES key on an HSM/TPM/SoftHSM.
# `cryptoki` dlopens the module at runtime (no link-time C dep), so this compiles everywhere;
# it only needs a real PKCS#11 module present at runtime.
credentials-pkcs11 = ["credentials", "dep:cryptoki"]
# Parameters: pluggable parameter service (gg.parameters()) with an offline-first cache. Reuses
# the credentials vault as the persistent encrypted cache store (same normative cross-language
# format), so it depends on `credentials`. Built-in sources: env + mountedDir (K8s ConfigMap/
# Secret volumes, Docker secrets) — no AWS. `parameters-aws` adds the SSM Parameter Store source.
parameters = ["credentials"]
parameters-aws = ["parameters", "dep:aws-config", "dep:aws-sdk-ssm"]

[dependencies]
thiserror = "2"
clap = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonschema = "0.46"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs"] }
async-trait = "0.1"
arc-swap = "1"
sysinfo = "0.39"
notify = "8"
# Message wire-format parity with Java/Python: UUID correlation ids + RFC3339 timestamps.
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
# Uniform jitter for the _bcast republish listener's anti-stampede delay (UNS-CANONICAL-DESIGN
# §9.3/§9.4). Already a transitive dependency (rumqttc et al.); pinned direct here since the
# listener is core plumbing, not feature-gated.
rand = "0.8"

# STANDALONE-only. Pure-Rust async MQTT — no C toolchain, clean ARM/musl cross-compile.
rumqttc = { version = "0.25", optional = true }

# cloudwatch metric target (feature = "cloudwatch").
aws-config = { version = "1", optional = true }
aws-sdk-cloudwatch = { version = "1", optional = true }

# prometheus metric target (feature = "metrics-prometheus"). The community client (tikv/
# rust-prometheus); there is no Prometheus-org official Rust client. Default features only enable
# the cross-platform `protobuf` exposition encoder used to serve a valid OpenMetrics Content-Type
# (the `process` procfs collector and `push` gateway are deliberately NOT enabled).
prometheus = { version = "0.14", optional = true }

# Telemetry-streaming core (feature = "streaming"); the Kinesis sink adds the AWS SDK
# (feature = "streaming-kinesis"). Pure-Rust core builds everywhere.
ggstreamlog = { path = "../rust-streamlog", optional = true }

# Credentials / local vault (feature = "credentials"). Universal, cross-language-portable
# primitives (AES-256-GCM, HMAC-SHA256, HKDF-SHA256) so the on-disk vault format is identical
# across the Java/Python/TS ports; zeroize wipes key material; fs4 is the cross-platform
# advisory file lock for the shared device vault's single-writer model.
aes-gcm = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
hkdf = { version = "0.12", optional = true }
zeroize = { version = "1", optional = true }
getrandom = { version = "0.2", optional = true }
base64 = { version = "0.22", optional = true }
fs4 = { version = "0.13", optional = true, features = ["sync"] }
# Central source (feature = "credentials-aws"): AWS Secrets Manager via the AWS SDK
# (aws-config is already an optional dep above for the cloudwatch feature).
aws-sdk-secretsmanager = { version = "1", optional = true }
aws-sdk-kms = { version = "1", optional = true }
# Parameters source (feature = "parameters-aws"): AWS SSM Parameter Store via the AWS SDK.
aws-sdk-ssm = { version = "1", optional = true }
# PKCS#11 KEK custodian (feature = "credentials-pkcs11"). Runtime-loads the module via libloading.
cryptoki = { version = "0.8", optional = true }

# GREENGRASS-only. Native AWS Greengrass IPC SDK (lib name `gg_sdk`).
# Linux-only C-FFI crate (bindgen + cc); only built when the `greengrass` feature is
# enabled, which must only be done on a Linux toolchain.
aws-greengrass-component-sdk = { version = "1.0.4", optional = true }

# logging.fileLogging (size-rotated file output) is implemented self-contained in
# src/logging.rs (std::fs only) — no tracing-appender needed (it only does
# time-based rotation; we match the Python library's size-based maxFileSize/backupCount).
# notify drives FILE config hot-reload (src/config/source/file.rs); local + IoT Core
# TLS (incl. mutual) is provided by rumqttc's rustls. The cloudwatch metric target
# (aws-config / aws-sdk-cloudwatch) is gated behind the optional `cloudwatch` feature.

# Windows: per-process thread + handle counts for the heartbeat (sysinfo lacks these).
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
anyhow = "1"
# Integration-test logging to a file (in addition to the console).
tracing-appender = "0.2"
# Temp dirs for streaming tests (RAII cleanup).
tempfile = "3"
