[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "<<BINNAME>>"
version = "0.1.0"
description = "<<DESCRIPTION>>"
requires-python = ">=3.9"
dependencies = [
    # The edgecommons Python library. The CLI substitutes the dependency form you chose with
    # `--dep-source`: a pinned git requirement for `registry`, or an editable local sibling for
    # `local`. This mirrors requirements.txt; keep the two in sync (bump with
    # `edgecommons component upgrade`).
    # TODO: add your protocol client library here, e.g. "pymodbus>=3.6".
]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-cov"]

[tool.setuptools]
packages = ["<<SNAKENAME>>"]

[tool.pytest.ini_options]
# The package resolves from the repo root without an install (the CI/scaffold-build gate runs
# `python -m pytest`); `pip install -e .` also works.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
