[package]
name = "<<BINNAME>>"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
description = "<<DESCRIPTION>>"
publish = false

[[bin]]
name = "<<BINNAME>>"
path = "src/main.rs"

# Runtime selection mirrors the ggcommons library:
#   - `standalone` (default): dual-broker MQTT — runs on a laptop/container, no C
#     toolchain. Use this for `cargo run` / `cargo test` during development.
#   - `greengrass`: Greengrass IPC — the on-device build. Linux-only (the SDK is a
#     C-FFI crate needing libclang). `build.sh` builds the artifact with this feature.
[features]
default = ["standalone"]
standalone = ["ggcommons/standalone"]
greengrass = ["ggcommons/greengrass"]
# Direct CloudWatch metric target (AWS SDK PutMetricData); combine with `greengrass`.
cloudwatch = ["ggcommons/cloudwatch"]

[dependencies]
# ggcommons Rust library. The dependency form is chosen by `--dep-source` at generation:
#   local    -> path = "<abs path to libs/rust>"   (a monorepo checkout; the dev default)
#   registry -> git = "https://github.com/edgecommons/ggcommons", tag = "rust-lib/vX.Y.Z"
# (swap the git dep for a crates.io version once the crate is published).
ggcommons = { <<GGCOMMONS_DEP>>, default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
async-trait = "0.1"
