[package]
name = "<<BINNAME>>"
version = "1.0.0"
edition = "2021"
# Matches the edgecommons library's MSRV (edition-2024 crate).
rust-version = "1.85"
license = "Apache-2.0"
description = "<<DESCRIPTION>>"
publish = false

[[bin]]
name = "<<BINNAME>>"
path = "src/main.rs"

# Runtime selection mirrors the edgecommons library:
#   - `standalone` (default): dual-broker MQTT — runs on a laptop/container, no C
#     toolchain. Use this for `cargo run` / `cargo test` during development.
#   - `greengrass`: Greengrass IPC — the on-device build. Linux-only (the SDK is a
#     C-FFI crate needing libclang). `build.sh` builds the artifact with this feature.
[features]
default = ["standalone"]
standalone = ["edgecommons/standalone"]
greengrass = ["edgecommons/greengrass"]
# Direct CloudWatch metric target (AWS SDK PutMetricData); combine with `greengrass`.
cloudwatch = ["edgecommons/cloudwatch"]

[dependencies]
# edgecommons Rust library. The dependency form is chosen by `--dep-source` at generation:
#   local    -> path = "<abs path to libs/rust>"   (a monorepo checkout; the dev default)
#   registry -> git = "https://github.com/edgecommons/edgecommons", tag = "rust-lib/vX.Y.Z"
# (swap the git dep for a crates.io version once the crate is published).
#
# `local` (the default `--dep-source`) IS this template's local-dev override: a Cargo path
# dependency resolves straight from the sibling checkout's current source (even an unpublished
# branch like feat/unified-namespace), so unlike an ALREADY-SCAFFOLDED component with a published
# git-rev pin (see the bridge's gitignored .cargo/config.toml `[patch]`, which redirects that pin
# to the sibling), a freshly generated component needs no extra override step at all. Selecting
# `--dep-source registry` before a real `rust-lib/vX.Y.Z` tag exists will fail to resolve — that
# path is the release-time item (see `cli/edgecommons_cli/commands/create_component.py`'s
# `_EDGECOMMONS_VERSION`, currently behind the sibling library's own Cargo.toml version).
edgecommons = { <<EDGECOMMONS_DEP>>, default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
serde_json = "1"
tracing = "0.1"
anyhow = "1"
async-trait = "0.1"
