[package]
name = "ec-adapters"
description = "Adapters behind the deployment ports. The ONLY crate permitted to link a cloud SDK, and only in the Greengrass adapter."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ec-deploy = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
